# AnalysisTableDependencies

./: .coveragerc  ARCHITECTURE.md  CODING_STANDARDS.md  DATA_MODELS.md  DEPENDENCY_ANALYZER_DESIGN.md  HTML_REPORT_DESIGN.md  IMPLEMENTATION_PHASES.md  MODULAR_BREAKDOWN.md  README.md  TEST_PLAN.md  TEST_RUN_REPORT.md  USAGE_TABLE_DEPENDENCY_DIAGRAM_PLAN.md  XML_PARSING_STRATEGY.md  generate_report.py  pyproject.toml  pytest.ini  report.html  requirements.txt  run_local_site.sh  run_tests.sh  test_html_generator.py
SampleXMLFiles/: Analysis_ObjectDependencies.xml  Analysis_Objects.xml  Analysis_TableDependencies.xml  Analysis_Tables.xml
docs/decisions/: 2026-01-22-console-interface-design.md
src/: config.py  main.py
src/database_dependency_analyzer/: __init__.py
src/database_dependency_analyzer/analyzers/: __init__.py  dependency_analyzer.py  statistics_calculator.py  usage_tracker.py
src/database_dependency_analyzer/console/: __init__.py  argument_parser.py  output_formatter.py  progress_tracker.py
src/database_dependency_analyzer/generators/: __init__.py  html_generator.py
src/database_dependency_analyzer/models/: __init__.py  analysis_result.py  config.py  dependency.py  object.py  table.py
src/database_dependency_analyzer/parsers/: __init__.py  dependency_parser.py  object_parser.py  table_parser.py  xml_parser.py
tests/: conftest.py  test_analyzer.py  test_console.py
tests/fixtures/edge_cases/empty_files/: empty.xml
tests/fixtures/json/: expected_analysis.json  expected_statistics.json
tests/fixtures/xml/: sample_object_deps.xml  sample_objects.xml  sample_table_deps.xml  sample_tables.xml
tests/integration/: test_full_analysis_integration.py  test_parsers_integration.py
tests/unit/: test_parsers.py
tests/utils/: data_factory.py  xml_generator.py
(+2 files in other folders)
